--- a/src/components/ForEach/style.module.scss
+++ b/src/components/ForEach/style.module.scss
@@ -51,6 +51,8 @@
         padding: $size7px $size12px;
         margin-left: $size8px;
         margin-top: $size313px;
+        font-weight: 500;
+        letter-spacing: calc(-1 * min(0.46px, 0.096vw));
       }
     }
   }
